--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
 }
-img{
+.img{
    width: 100px;
     border-radius: 50%;
 }
@@ -11,14 +11,14 @@ img{
     width: 70px;
     margin: 8px auto;
 }
-.About {
+#About {
    background-image: linear-gradient(to top, #F44336, #fcb045, #833ab4);
     padding-bottom: 5px;
   text-align:center;
   font-size:18px;
  font-family: 'Cinzel', serif;
 }
-.Welcome {
+#Welcome {
    font-family: 'Dancing Script', cursive;
  background: linear-gradient(225deg, rgba(34,195,85,1) 0%, rgba(45,200,253,1) 100%);
   font-size: 18px;
@@ -43,4 +43,15 @@ img{
     right: 30px;
     cursor: pointer;
     color: black;
+    z-index: 10;
+}
+.book{
+    width: 200px;
+    height: 200px;
+}
+#My-Work{
+    background: linear-gradient(#2196F3,#FFFF00)
+}
+html{
+    scroll-behavior: smooth;
 }
