--- a/style.css
+++ b/style.css
@@ -1,34 +1,40 @@
-body{
+body {
     text-align: center;
 }
-.img{
-   width: 100px;
+
+.img {
+    width: 100px;
     border-radius: 50%;
 }
+
 .line {
     height: 6px;
     background-color: black;
     width: 70px;
     margin: 8px auto;
 }
+
 #About {
-   background-image: linear-gradient(to top, #F44336, #fcb045, #833ab4);
+    background-image: linear-gradient(to top, #F44336, #fcb045, #833ab4);
     padding-bottom: 5px;
-  text-align:center;
-  font-size:18px;
- font-family: 'Cinzel', serif;
+    text-align: center;
+    font-size: 18px;
+    font-family: 'Cinzel', serif;
 }
+
 #Welcome {
-   font-family: 'Dancing Script', cursive;
-   background: linear-gradient(225deg, rgba(34,195,85,1) 0%, rgba(45,200,253,1) 100%);
-   font-size: 18px;
-   padding-bottom: 25px;
+    font-family: 'Dancing Script', cursive;
+    background: linear-gradient(225deg, rgba(34, 195, 85, 1) 0%, rgba(45, 200, 253, 1) 100%);
+    font-size: 18px;
+    padding-bottom: 25px;
 }
-.links:hover{
+
+.links:hover {
     font-size: 25px;
     text-decoration: underline;
     background-color: aqua;
 }
+
 .links {
     display: inline;
     padding-left: 33px;
@@ -36,8 +42,9 @@ body{
     font-family: fantasy;
     font-size: 20px;
 }
-.Menu{
-   list-style: none;
+
+.Menu {
+    list-style: none;
     font-family: cursive;
     top: 10px;
     right: 30px;
@@ -45,20 +52,34 @@ body{
     color: black;
     z-index: 10;
 }
-.book{
+
+.book {
     width: 200px;
     height: 200px;
 }
-#My-Work{
-    background: linear-gradient(#2196F3,#FFFF00)
+
+#My-Work {
+    background: linear-gradient(#2196F3, #FFFF00);
+     font-family: sans-serif;   
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
-#My-Work{
+
+#My-Work {
     font-size: 25px;
     font-family: 'Dancing Script', cursive;
 }
-.Work{
+
+.Work {
     font-size: 30px
+}
+.my-img{
+    border-radius: 100px;
+    height: 200px;
+    width: 220px;
+}
+#My-inspiration{
+    background: linear-gradient(#FCE300,#FFFFFF,#BD0EED);
 }
