--- a/style.css
+++ b/style.css
@@ -83,3 +83,10 @@ html {
 #My-inspiration{
     background: linear-gradient(#FCE300,#FFFFFF,#BD0EED);
 }
+.Cricketer{
+    transition: transform: 2s;
+    border: 10px solid #
+}
+#Contacts{
+    background: linear-gradient(#C6EBB7,#FFFFFF,#F7F68D);
+}
